--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_picker: ^0.8.4+3
   google_maps_flutter: ^2.1.1
   location: ^4.4.0 # For fetching current location
+  http: ^0.13.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
