--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   google_maps_flutter: ^2.1.1
   location: ^4.4.0 # For fetching current location
   http: ^0.13.3
+  provider: ^6.0.3
 
 
 
